Masmovil - last fixes

--- a/oferta/masmovil/plp/index.html
+++ b/oferta/masmovil/plp/index.html
@@ -1,9 +1,8 @@
-<link href="css/ws10.css?v=a08ea466da04e4e224fa1f77c76c6b5b" rel="stylesheet">
-<link href="css/styles.css?v=9db0113e52092336d93ab34fbeb88d8b" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=dc582405a86180eac2dc183a4214295d" rel="stylesheet">
+<link href="css/styles.css?v=51c6595640154e98f95cc2d16ed2adff" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp-mm" style="visibility: hidden;opacity: 0">
     <!-- BREADCRUMBS -->
     <!-- Section BANNER -->
-    <!-- banner -->
     <section class="vf-banner">
         <div class="vf-banner__container ws10-o-wrapper">
             <div class="ws10-o-layout ws10-u--pb0 ws10-u--pt6x">
@@ -13,15 +12,10 @@
                         <span>Llévate <strong>datos ilimitados + fibra óptica</strong> con hasta <strong>40% dto. durante 1 año</strong></span>
                     </h1>
                 </div>
-                <div class="ws10-o-layout__item ws10-u--1/2@desktop">
-                    <picture>
-                        <source class="" srcset="img/bodegon-desktop.webp?v=4fbfb090405be91ab808267f9a52e7b2" type="image/webp">
-                        <source class="" srcset="img/bodegon-desktop.png?v=f28148dd8d23a34a412a3ddb3a31a49c" type="image/png">
-                        <img src="img/bodegon-desktop" alt="">
-                    </picture>            </div>
             </div>
         </div>
     </section>
+
     <div class="ws10-o-wrapper">
         <!-- Section RATES -->
         <section class="vf-rates ws10-u--pb8x">
@@ -57,6 +51,19 @@
                                                 </p>
                                                 <p class="ws10-c-card-rate__product-txt ">
                                                     + llamadas ilimitadas en fijo
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li class="ws10-c-card-rate__product-info-item">
+                                            <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <use xlink:href="#icon-tv"></use>
+                                            </svg>
+                                            <div class="ws10-c-card-rate__product">
+                                                <p class="ws10-c-card-rate__product-title">
+                                                    Pack TV Universal GRATIS
+                                                </p>
+                                                <p class="ws10-c-card-rate__product-txt ">
+                                                    AMC, Eurosport 1 y hasta 30 canales
                                                 </p>
                                             </div>
                                         </li>
@@ -265,6 +272,19 @@
                                                 </p>
                                                 <p class="ws10-c-card-rate__product-txt ">
                                                     + llamadas ilimitadas en fijo
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li class="ws10-c-card-rate__product-info-item">
+                                            <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <use xlink:href="#icon-tv"></use>
+                                            </svg>
+                                            <div class="ws10-c-card-rate__product">
+                                                <p class="ws10-c-card-rate__product-title">
+                                                    Pack TV Universal GRATIS
+                                                </p>
+                                                <p class="ws10-c-card-rate__product-txt ">
+                                                    AMC, Eurosport 1 y hasta 30 canales
                                                 </p>
                                             </div>
                                         </li>
@@ -485,7 +505,7 @@
                                                     Pack TV Seriefans GRATIS 1 año
                                                 </p>
                                                 <p class="ws10-c-card-rate__product-txt ">
-                                                    con HBO España y 60 canales más
+                                                    con HBO España y 60 canales más + deco incl.
                                                 </p>
                                             </div>
                                         </li>
@@ -494,7 +514,7 @@
                                         <div class="ws10-c-card-rate__w-offers">
                                             <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
                                                 <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent">
-                                                    35% dto. 1 año
+                                                    25% dto. 1 año
                                                 </p>
                                                 <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label">
                                                     Permanencia 1 año
@@ -660,7 +680,7 @@
                  <li class="ws10-o-layout__item ws10-u--p5x ws10-u--pt0 ws10-u--pb0 ws10-u--1/2@tablet ws10-u--1/4@desktop">
                         <article class="ws10-c-feature-hifi">
                                 <span class="ws10-c-feature-hifi__background">
-                                    <img src="img/section-vodafone-one/icono-convergente.svg?v=d5597e8cec98a639336803bb14a7f6ef" alt="">
+                                    <img src="img/section-vodafone-one/icono-convergente.svg?v=41da0c5b0fe4cf725ca192a66fd7d89b" alt="">
                                 </span>
                             <h3 class="ws10-c-feature-hifi__title">Vodafone One</h3>
                             <p class="ws10-c-feature-hifi__text">Móvil, fibra y fijo incluido. Y el pack de TV aparte para que puedas configurar tu televisión eligiendo tu contenido favorito.</p>
@@ -669,7 +689,7 @@
                  <li class="ws10-o-layout__item ws10-u--p5x ws10-u--pt0 ws10-u--pb0 ws10-u--1/2@tablet ws10-u--1/4@desktop">
                         <article class="ws10-c-feature-hifi">
                                 <span class="ws10-c-feature-hifi__background">
-                                    <img src="img/section-vodafone-one/icono-fibra.svg?v=11e0f9401ae12a8f778e4abfd83ea187" alt="">
+                                    <img src="img/section-vodafone-one/icono-fibra.svg?v=47f66842ebc65eaa036038eb294f7f73" alt="">
                                 </span>
                             <h3 class="ws10-c-feature-hifi__title">Fibra óptica</h3>
                             <p class="ws10-c-feature-hifi__text">La instalación al igual que el módem, es gratuita y rápida pero no tanto como la fibra con la que podrán conectarse sin perder velocidad varios dispositivos a la vez. Además, al ser fibra óptica simétrica tendrás los mismos megas de subida que de bajada.</p>
@@ -678,7 +698,7 @@
                  <li class="ws10-o-layout__item ws10-u--p5x ws10-u--pt0 ws10-u--pb0 ws10-u--1/2@tablet ws10-u--1/4@desktop">
                         <article class="ws10-c-feature-hifi">
                                 <span class="ws10-c-feature-hifi__background">
-                                    <img src="img/section-vodafone-one/icono-paquetes.svg?v=af87ee6e43638049443c124552ad80c1" alt="">
+                                    <img src="img/section-vodafone-one/icono-paquetes.svg?v=086bdd623dfc353aff127d2e8546c0b4" alt="">
                                 </span>
                             <h3 class="ws10-c-feature-hifi__title">Paquetes Vodafone</h3>
                             <p class="ws10-c-feature-hifi__text">Configura tu paquete para que incluya fibra, móvil y televisión. Añade las líneas que necesites y elige el pack de televisión que se adapte a tus gustos.</p>
@@ -687,7 +707,7 @@
                  <li class="ws10-o-layout__item ws10-u--p5x ws10-u--pt0 ws10-u--pb0 ws10-u--1/2@tablet ws10-u--1/4@desktop">
                         <article class="ws10-c-feature-hifi">
                                 <span class="ws10-c-feature-hifi__background">
-                                    <img src="img/section-vodafone-one/icono-5g.svg?v=67ea51337e1cf2109b982e4e097207e4" alt="">
+                                    <img src="img/section-vodafone-one/icono-5g.svg?v=d436b1908fabbad3300460a25cd4d850" alt="">
                                 </span>
                             <h3 class="ws10-c-feature-hifi__title">Red 5G</h3>
                             <p class="ws10-c-feature-hifi__text">Navega a máxima velocidad con 5G. Descarga una serie en segundos, juega online a tiempo real y disfruta de una calidad mayor de vídeo y voz.</p>
@@ -700,8 +720,8 @@
         <section class="vf-banner50 ws10-u--mt8x ws10-o-layout ws10-flex__align-items--center ws10-flex__justify--between ws10-u--pb8x">
             <div class="vf-banner50__container1 ws10-o-layout__item ws10-u--1/2@desktop ws10-align--right">
                   <picture>
-                      <source class="" srcset="img/section-vodafone-one/mama-hija.webp?v=138b00c2b56e45edbc4c271decd945dd" type="image/webp">
-                      <source class="" srcset="img/section-vodafone-one/mama-hija.jpg?v=ab657b022c1cbeb7f3ed1ebf44e9a881" type="image/jpg">
+                      <source class="" srcset="img/section-vodafone-one/mama-hija.webp?v=fd95df13f6888d7e9060c3b2e67cb077" type="image/webp">
+                      <source class="" srcset="img/section-vodafone-one/mama-hija.jpg?v=7bf8238729c0f9a11756066f9ae1c136" type="image/jpg">
                       <img src="img/section-vodafone-one/mama-hija" alt="">
                   </picture>    </div>
             <div class="vf-banner50__container2 ws10-o-layout__item ws10-u--1/2@desktop">
@@ -713,4 +733,4 @@
 
 </div>
 <script src="js/ws10.js?v=566ecc00e5c21622f0822c7e9d38f861"></script>
-<script src="js/main.js?v=420611d21a32944bdb2ffa71c24d97ad"></script>
+<script src="js/main.js?v=da330de0d072c49ae4ea6a2a52e75405"></script>
