--- a/oferta/masmovil/tarifa-2/index.html
+++ b/oferta/masmovil/tarifa-2/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=5e64984899330f825da6eee4fd6add14" rel="stylesheet">
-<link href="css/styles.css?v=e4723c1c33e2d97846d147cafa1cdb9a" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=a5e6db41d737148dae29ac17d494c82a" rel="stylesheet">
+<link href="css/styles.css?v=fc6872eaeb47203d95c8b87d2230e356" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo euskaltel_mas movil_ multilinea_D4", "promotion_gift_name": "", "product_id": "168446377", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo euskaltel_mas movil_ multilinea_D4","promotion_gift_name": "","product_id": "168446377","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "","product_category": "","promotion_price_name": "","promotion_gift_name": "","product_id": ""}]}];
 </script>
@@ -66,6 +66,19 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
                                                 </p>
                                             </div>
                                         </li>
+                                        <li class="ws10-c-card-rate__product-info-item">
+                                           <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                               <use xlink:href="#icon-tv"></use>
+                                           </svg>
+                                           <div class="ws10-c-card-rate__product">
+                                               <p class="ws10-c-card-rate__product-title">
+                                                   Pack TV Universal GRATIS
+                                               </p>
+                                               <p class="ws10-c-card-rate__product-txt">
+                                                   AMC, Eurosport 1 y hasta 30 canales
+                                               </p>
+                                           </div>
+                                       </li>
                                     </ul>
                                     <div class="ws10-c-card-rate__w-cta" data-js-vf="_showOrHideSticky">
                                         <div class="ws10-c-card-rate__w-offers">
@@ -853,4 +866,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
     </div>
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=e770a7ea0a1ef5d60d666aaef382e9c5"></script>
+<script src="js/main.js?v=5830b033ed06b4a9cd3b3c07b61bc196"></script>
