Jumanji PLP fix analítica

--- a/jumanji/plp/index.html
+++ b/jumanji/plp/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=c92408cec0f60a6307bb8eb8e2ec4847" rel="stylesheet">
-<link href="css/styles.css?v=0979eb16970f6a9590adbf73a9bcd744" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=fb71fa86350bfb5ac8e975edd31833c3" rel="stylesheet">
+<link href="css/styles.css?v=49c8e086c77e4c3549c9b1044da44c8d" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp" style="visibility: hidden;opacity: 0">
     <!-- Section BANNER -->
     <!-- banner -->
@@ -106,7 +106,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/alt/j/paquete-one-3/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="mas info:vodafone one ilimitada avanzada 300mbps" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-168446368">
+                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/alt/j/paquete-one-3/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="300mbps" data-analytics-element="cardrate:one ilimitada avanzada" data-analytics-category="cta" data-analytics-id="-168446368">
                                             Más info
                                         </a>
                                     </div>
@@ -192,7 +192,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/alt/j/paquete-one-4/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="mas info:vodafone one ilimitada avanzada 600mbps" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-168446368">
+                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/alt/j/paquete-one-4/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="300mbps" data-analytics-element="cardrate:one ilimitada avanzada tv" data-analytics-category="cta" data-analytics-id="-168446368">
                                             Más info
                                         </a>
                                     </div>
@@ -278,7 +278,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/alt/j/paquete-one-5/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="mas info:vodafone one ilimitada plus 600mbps" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-168446420">
+                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/alt/j/paquete-one-5/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="300mbps" data-analytics-element="cardrate:one ilimitada plus" data-analytics-category="cta" data-analytics-id="-168446420">
                                             Más info
                                         </a>
                                     </div>
@@ -438,4 +438,4 @@
     </div>
 </div>
 <script src="js/ws10.js?v=87a5cdccb0beeab7883be40ee6f35ec1"></script>
-<script src="js/main.js?v=3bb8d4ddfdd76c52bbaca1b6496790bf"></script>
+<script src="js/main.js?v=a2bcad409591a67fc74e6378e57bb15c"></script>
